# zasmart-finger

./: CMakeLists.txt  LICENSE  README.md  partitions_head.csv  partitions_oid.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3
cmd/: installarduino.sh  installenv.sh  installenv_541.sh  killproc.sh  set_version.sh  za_start_c3.sh  za_start_s3.sh
components/zhengan/: CMakeLists.txt  za_common.c  zhengan.c
components/zhengan/include/: za_aiosm.h  za_aiot.h  za_appext.h  za_blufi.h  za_command.h  za_common.h  za_console.h  za_info.h  za_innersor.h  za_json.h  za_storage.h  za_system.h  za_upgrade.h  za_wifi.h  zhengan.h
components/zhengan/za_aiosm/: za_aiosm.c
components/zhengan/za_aiot/: za_aiot.c  za_aiot_mqtt.c  za_aiot_mqtt.h  za_aiot_mqttlocal.c  za_aiot_mqttlocal.h  za_aiot_mqtts.c  za_aiot_mqtts.h  za_aiot_udp.c  za_aiot_udp.h
components/zhengan/za_app/: za_appext.c
components/zhengan/za_blufi/: blufi_example.h  za_blufi.c
components/zhengan/za_command/: cmd_common.c  cmd_common.h  cmd_gamectrl.c  cmd_systminr.c  cmd_upgradei.c  za_command.c
components/zhengan/za_console/: cmd_system.c  cmd_zasmart.c  cmd_zasmart.h  za_console.c
components/zhengan/za_info/: za_info.c
components/zhengan/za_innersor/: za_innersor.c
components/zhengan/za_json/: za_json.c
components/zhengan/za_storage/: za_storage.c
components/zhengan/za_system/: za_system.c
components/zhengan/za_upgrade/: za_upgrade.c
components/zhengan/za_wifi/: za_wifi.c
docs/: setenv.sh  setenv_541.sh
main/: CMakeLists.txt  Kconfig.projbuild  application.h  (+7 more)
(+26 files in other folders)
